--- a/index.css
+++ b/index.css
@@ -1,82 +1,132 @@
-html,body{
-    height: 100%;
+@import url(https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap);
+
+:root {
+    --falcon-body-color: #5e6e82;
+    --falcon-body-bg: #edf2f9;
+    --falcon-card-border-color: rgba(0, 0, 0, 0.13);
+    --falcon-box-shadow: 0 7px 14px 0 rgba(65, 69, 88, 0.1), 0 3px 6px 0 rgba(0, 0, 0, 0.07)
+}
+
+body {
+    color: #000;
+    background-color: var(--falcon-body-bg);
+    font-family: Roboto, sans-serif
+}
+
+.card {
+    border: 0 solid var(--falcon-card-border-color);
+    border-radius: .375rem;
+    box-shadow: var(--falcon-box-shadow);
+    background-color: #ecf0f3;
+    color: #a0a5a8
+}
+
+.card .card--heading {
+    color: #31344b
+}
+
+.bg-card {
+    background-image: url(../img/corner-4.png);
+    background-size: cover;
+    background-position: right;
+    border-top-right-radius: .375rem;
+    border-bottom-right-radius: .375rem
+}
+
+.bg-holder {
+    position: absolute;
     width: 100%;
-    overflow: hidden;
-    background-color: #e3d5ca;
-    font-family: monospace; 
-  }
-  body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  label{
-    font-size: 24px;
-    font-weight: 700; 
-    cursor: pointer; 
-    color: #525d6f; 
-    opacity: .4; 
-    transition: opacity .4s ease-in-out;
-    display: block; 
-    width: calc(100% - 48px) ;
-    text-align: right; 
-    z-index: 100; 
-    user-select: none;
-  }
-  input[type="radio"]{
-    display: none;
-    width: 0;
-  }
-  label:hover, input[type="radio"]:checked+label {
-    opacity: 1; 
-  }
-  .popup{
-    width: 60%;
-    height: 80%;
-    min-height: 480px; 
-    max-height: 480px; 
-    border-radius: 48px;
-    box-sizing: border-box; 
-    border: 16px solid #f5ebe0;
-    background-color: #f5ebe04f;
-    overflow: hidden;
-    box-shadow: 16px 16px 48px #2e364330; 
-  }
-  .tabs{
-    width: 100%;
-    max-width: 240px;
-    height: 100%;
-    display: flex;
-    flex-direction: column; 
-    justify-content: space-around; 
-    position: relative;
-  }
-  .marker{
-    position: absolute; 
-    width: 100%;
-    height: 200%;
-    display: flex; 
-    flex-direction: column;
-    top: calc(-100% );
+    min-height: 100%;
+    top: 0;
     left: 0;
-    transition: transform .2s ease-in-out; 
-  }
-  .marker #bottom, .marker #top{
-    background-color: #f5ebe0;
-    box-shadow: 32px 32px 48px #2e364315; 
-  }
-  .marker #top{
-    height: calc(50%);
-    margin-bottom: auto; 
-    border-radius: 0 0 32px 0; 
-  }
-  .marker #bottom{
-    height: calc(50% - 72px);
-    border-radius: 0 32px 0 0; 
-  }
-  #tab1:checked ~ .marker{transform: translateY(calc(calc(50% / 6) * 0));}
-  #tab2:checked ~ .marker{transform: translateY(calc(calc(50% / 6) * 1));}
-  #tab3:checked ~ .marker{transform: translateY(calc(calc(50% / 6) * 2));}
-  #tab4:checked ~ .marker{transform: translateY(calc(calc(50% / 6) * 3));}
-  #tab5:checked ~ .marker{transform: translateY(calc(calc(50% / 6) * 4));}
-  #tab6:checked ~ .marker{transform: translateY(calc(calc(51% / 6) * 5));}
+    z-index: 0;
+    background-repeat: no-repeat
+}
+
+.btn--primary {
+    border-radius: 25px;
+    letter-spacing: 1px;
+    background-color: #4b70e2;
+    color: #f9f9f9;
+    box-shadow: 8px 8px 16px #d1d9e6, -8px -8px 16px #f9f9f9;
+    border: none;
+    outline: 0;
+    padding: 10px 40px;
+    transform: scale(1)
+}
+
+.btn--primary:focus,
+.btn--primary:hover {
+    color: #f9f9f9;
+    box-shadow: 6px 6px 10px #d1d9e6, -6px -6px 10px #f9f9f9;
+    transform: scale(.985);
+    transition: .25s
+}
+
+.btn-tabs {
+    background: #ecf0f3;
+    box-shadow: -3px -3px 7px #fff, 3px 3px 5px #ceced1;
+    color: #31344b
+}
+
+.nav-tabs {
+    background-color: #ecf0f3;
+    box-shadow: 4px 4px 10px #d1d9e6, -4px -4px 10px #f9f9f9;
+    padding: 20px
+}
+
+.btn-tabs::before {
+    content: "📒"
+}
+
+.btn-tabs.active::before {
+    content: "📖"
+}
+
+#v-pills-tabContent .tab-pane {
+    padding: 20px
+}
+
+.form__input {
+    letter-spacing: .15px;
+    border: none;
+    outline: 0;
+    padding: .5rem 1rem;
+    background-color: #ecf0f3;
+    transition: .25s ease;
+    border-radius: 8px;
+    box-shadow: inset 2px 2px 4px #d1d9e6, inset -2px -2px 4px #f9f9f9
+}
+
+.form__input:focus {
+    box-shadow: inset 4px 4px 4px #d1d9e6, inset -4px -4px 4px #f9f9f9
+}
+
+.callout {
+    padding: 1.25rem;
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
+    border: 1px solid #e9ecef;
+    border-left-width: .25rem;
+    border-radius: .25rem;
+    background: #fff;
+    color: #31344b;
+    box-shadow: -3px -3px 7px #fff, 3px 3px 5px #ceced1
+}
+
+.callout-info {
+    border-left-color: #5bc0de
+}
+
+.accordion-item .accordion-button {
+    box-shadow: none
+}
+
+#bai1 form {
+    padding-right: calc(var(--bs-gutter-x) * .5);
+    padding-left: calc(var(--bs-gutter-x) * .5)
+}
+
+.callout-warning {
+    border-left-color: rgba(255,193,7,0.5);
+}
